# daw

./: .gitignore  .mise.toml  CLAUDE.md  CMakeLists.txt  GOTCHAS.md  VERIFY.md
Assets/: make_icon.swift
Resources/: daw.entitlements
Source/: Main.cpp
Source/audio/: AudioEngine.cpp  AudioEngine.h  BounceRenderer.cpp  BounceRenderer.h  PlaybackEngine.cpp  PlaybackEngine.h  Recorder.cpp  Recorder.h
Source/mac/: SparkleBridge.h  SparkleBridge.mm
Source/shared/: GmInstruments.h  Log.cpp  Log.h  Pan.h  PlaybackSnapshot.h  Ppq.h  PreviewFifo.h  Project.cpp  Project.h  SharedAudioState.h  SynthBank.cpp  SynthBank.h  TransportState.h  UndoStack.h  WaveformFifo.h
Source/ui/: AddTrackOverlay.h  AppLookAndFeel.h  BounceOverlay.h  Fonts.h  FxDetailView.h  FxEditorView.cpp  FxEditorView.h  IconButton.h  MainComponent.cpp  MainComponent.h  MixerOverlay.cpp  MixerOverlay.h  MixerWindow.h  PianoRollView.cpp  PianoRollView.h  ProjectChooserComponent.cpp  ProjectChooserComponent.h  ProjectThumbnails.h  SendKnob.h  SendRow.h  ShortcutListOverlay.h  Shortcuts.h  SlotPill.h  StereoMeter.h  StripParts.h  Theme.h  TimelineView.cpp  TimelineView.h  TrackHeadersView.cpp  TrackHeadersView.h  TrackIcons.h  TransportLcd.h  WaveformDisplay.cpp  WaveformDisplay.h
Tests/: TestsMain.cpp
docs/: CHANGELOG.md
docs/plans/: 2026-07-20-tier1-multitrack-timeline.md  2026-07-20-tier2-midi-editing.md  2026-07-21-apple-style-fonts.md  2026-07-21-region-mute.md  2026-07-21-region-split.md  2026-07-21-track-level-meters.md  2026-07-22-bounce-export.md  2026-07-22-close-to-chooser.md  2026-07-22-fx-editor-shell.md  2026-07-22-mixer-foundation.md  2026-07-22-release-update-pipeline.md  2026-07-22-section-markers.md  2026-07-22-shortcut-key-display.md  2026-07-23-cycle-range.md  2026-07-23-region-export.md  2026-07-23-region-move-and-track-reorder.md
scripts/: build.sh  fetch-sparkle.sh  release.sh
